added traveler quiz, styling

--- a/illegal-short-term-rentals/index.html
+++ b/illegal-short-term-rentals/index.html
@@ -579,11 +579,6 @@
                       data-parent="#accordion-01"
                     >
                       <div class="card-body">
-                        <p>
-                          Are you concerned that apartments in your building or the homes on your block are
-                          being used as illegal short-term rentals, or that these rentals are disrupting the
-                          safety and peace of your building or neighborhood?
-                        </p>
                         <p><b>Here are some signs you should be aware of:</b></p>
                         <ul>
                           <li>
@@ -607,12 +602,12 @@
                             Noise or other behaviors not characteristic of your dwelling or neighborhood.
                           </li>
                         </ul>
-                        <h4><a href="#">Submit a Complaint</a></h4>
                       </div>
                     </div>
                     <!-- .collapse -->
                   </div>
                   <!-- .card -->
+                  <a href="#" class="button">Submit a Complaint</a>
                 </div>
                 <h3>Learn About the Laws and Fines</h3>
                 <p>
