--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <h1 class="card-title display-4 font-weight-bold mb-3">
                   Lorem ipsum dolor sit amet consectetur.
                 </h1>
-                <a href="#" class="btn btn-lg btn-info">Button Link</a>
+                <a href="#" class="button">Button Link</a>
               </div>
             </div>
           </div>
