added news articles, testimony, reports

--- a/illegal-short-term-rentals/index.html
+++ b/illegal-short-term-rentals/index.html
@@ -406,7 +406,7 @@
 
           <div class="col-xl-8 overflow-hidden" id="primary-content">
             <div class="my-5">
-              <div class="narrow my-4">
+              <div class="narrow my-4" id="about-istr">
                 <h2>About Short-Term Rentals</h2>
 
                 <p>
@@ -607,7 +607,13 @@
                     <!-- .collapse -->
                   </div>
                   <!-- .card -->
-                  <a href="#" class="button">Submit a Complaint</a>
+                  <a
+                    class="btn btn-lg btn-outline-primary has-icon"
+                    href="../contact/submit-a-complaint.html"
+                  >
+                    <span class="fas fa-angle-right" role="img"></span>
+                    <span class="title">Submit a Complaint</span>
+                  </a>
                 </div>
                 <h3>Learn About the Laws and Fines</h3>
                 <p>
