--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
           </div>
           <!-- .row -->
 
-          <a class="btn btn-lg btn-outline-primary has-icon" href="#">
+          <a class="btn btn-lg btn-outline-primary has-icon" href="./about/mission-and-vision.html">
             <span class="fas fa-angle-right" role="img"></span>
             <span class="title">Learn more about OSE</span>
           </a>
@@ -401,19 +401,19 @@
         <!-- .container -->
       </section>
 
-      <section class="bg-primary py-5">
+      <section id="quick-links" class="py-5">
         <div class="container">
           <div class="row matrix-gutter">
             <div class="col-md">
-              <div class="card h-100 bg-secondary">
-                <div class="card-body text-white">
+              <div class="card h-100">
+                <div class="card-body">
                   <h2 class="card-title">Is your short-term rental illegal?</h2>
                   <p class="card-text">
                     Mus malesuada dapibus ac condimentum habitasse a praesent commodo penatibus.
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a class="btn btn-lg btn-white btn-block has-icon disperse stretched-link" href="#">
+                  <a class="btn btn-lg btn-block has-icon disperse stretched-link" href="./illegal-short-term-rentals/quiz.html">
                     <span class="fas fa-angle-right" role="img"></span>
                     <span class="title">Take the Quiz!</span>
                   </a>
@@ -423,15 +423,15 @@
             <!-- .col -->
 
             <div class="col-md">
-              <div class="card h-100 bg-secondary">
-                <div class="card-body text-white">
+              <div class="card h-100">
+                <div class="card-body">
                   <h2 class="card-title">Submit a Complaint</h2>
                   <p class="card-text">
                     Mus malesuada dapibus ac condimentum habitasse a praesent commodo penatibus.
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a class="btn btn-lg btn-white btn-block has-icon disperse stretched-link" href="#">
+                  <a class="btn btn-lg btn-block has-icon disperse stretched-link" href="./contact/submit-a-complaint.html">
                     <span class="fas fa-angle-right" role="img"></span>
                     <span class="title">Submit a Complaint</span>
                   </a>
@@ -441,15 +441,15 @@
             <!-- .col -->
 
             <div class="col-md">
-              <div class="card h-100 bg-secondary">
-                <div class="card-body text-white">
+              <div class="card h-100">
+                <div class="card-body">
                   <h2 class="card-title">Card Title</h2>
                   <p class="card-text">
                     Mus malesuada dapibus ac condimentum habitasse a praesent commodo penatibus.
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a class="btn btn-lg btn-white btn-block has-icon disperse stretched-link" href="#">
+                  <a class="btn btn-lg btn-block has-icon disperse stretched-link" href="#">
                     <span class="fas fa-angle-right" role="img"></span>
                     <span class="title">Button Link</span>
                   </a>
