--- a/news-and-reports/testimony.html
+++ b/news-and-reports/testimony.html
@@ -396,7 +396,7 @@
                     News
                   </a>
                   <a href="./reports.html" class="list-group-item list-group-item-action" role="listitem">
-                    Reports
+                    Annual Reports
                   </a>
                   <a
                     href="./testimony.html"
@@ -414,111 +414,36 @@
 
           <div class="col-xl-8 overflow-hidden" id="primary-content">
             <div class="my-5">
-              <div class="narrow my-4" id="news">
-                <h2>News</h2>
+              <div class="narrow my-4" id="testimony">
+                <h2>Testimony</h2>
 
                 <h6>
-                  December 16, 2019
+                  June 26, 2018
                 </h6>
                 <h5>
-                  <a
-                    href="/site/specialenforcement/news/sues-to-stop-displacement-of-rent-stabilized-units-2019-12-16.page"
-                    >Office of Special Enforcement Sues To Stop Displacement Of Rent-Stabilized Units in
-                    Four East Village Buildings</a
+                  <a href="./testimony/6_26_Short-term_Rental Hearing_OSE_Testimony.pdf"
+                    >Testimony Testimony of Christian Klossner, Executive Director of the Mayor’s Office of
+                    Special Enforcement regarding Short-term Rentals (Intro. No. 981, Intro. No. 554,
+                    Preconsidered)</a
+                  >
+                  <span
+                    >Mayor’s Office of Criminal Justice, New York City Council, Committee on Housing and
+                    Buildings</span
                   >
                 </h5>
+
                 <h6>
-                  June 19, 2019
+                  June 13, 2017
                 </h6>
                 <h5>
-                  <a
-                    href="/site/specialenforcement/news/city-sues-ring-of-illegal-hotel-operators-20190619.page"
-                    >City Sues Ring of Illegal Hotel Operators for Turning Housing Into Profit Across 36
-                    Buildings, Three Boroughs</a
+                  <a href="./testimony/6_13_Bed_and_Breakfast_Hearing_OSE_Testimony.pdf"
+                    >Testimony of Christian Klossner, Executive Director of the Mayor’s Office of Special
+                    Enforcement regarding increasing the number of boarders, roomers or lodgers permitted in
+                    one- and two-family homes (Intro. No. 1589)</a
                   >
-                </h5>
-                <h6>
-                  January 14, 2019
-                </h6>
-                <h5>
-                  <a
-                    href="https://www1.nyc.gov/office-of-the-mayor/news/029-19/de-blasio-administration-sues-firm-running-20-million-illegal-short-term-rental-operation"
-                    >De Blasio Administration Sues Firm For Running $20 Million Illegal Short-term Rental
-                    Operation</a
+                  <span
+                    >Mayor’s Office of Criminal Justice,  New York City Council, Committee on Housing and Buildings</span
                   >
-                </h5>
-                <h6>
-                  September 12, 2018
-                </h6>
-                <h5>
-                  <a
-                    href="https://www1.nyc.gov/office-of-the-mayor/news/466-18/new-york-city-lawsuit-against-three-illegal-hotel-operators"
-                    >New York City Announces Lawsuit Against Three Illegal Hotel Operators</a
-                  >
-                </h5>
-                <h6>
-                  June 6, 2018
-                </h6>
-                <h5>
-                  <a
-                    href="/site/specialenforcement/news/city-sues-landlord-for-converting-rent-stabilized-units-across-multiple-buildings-into-illegal-hotel-rooms-20180606.page"
-                    >City Sues Landlord for Converting Rent Stabilized Units Across Multiple Buildings Into
-                    Illegal Hotel Rooms</a
-                  >
-                </h5>
-                <h6>
-                  March 29, 2018
-                </h6>
-                <h5>
-                  <a
-                    href="/site/specialenforcement/news/city-wins-additional-one-million-against-illegal-hotel-operators-20180329.page"
-                    >City Wins Additional $1 Million Against Illegal Hotel Operators</a
-                  >
-                </h5>
-                <h6>
-                  February 15, 2018
-                </h6>
-                <h5>
-                  <a
-                    href="/site/specialenforcement/news/city-brings-first-illegal-hotel-nuisance-abatement-case-in-staten-island-20180215.page"
-                    >City Brings First Illegal Hotel Nuisance Abatement Case in Staten Island</a
-                  >
-                </h5>
-                <h6>
-                  January 22, 2018
-                </h6>
-                <h5>
-                  <a
-                    href="/site/specialenforcement/news/city-sues-landlord-for-converting-rent-stabilized-into-hotel-rooms-20180122.page"
-                    >City Sues Landlord for Converting Rent-stabilized Units Into Illegal Hotel Rooms</a
-                  >
-                </h5>
-                <h6>
-                  January 5, 2018
-                </h6>
-                <h5>
-                  <a
-                    href="/site/specialenforcement/news/largest-ever-settlement-with-city-in-illegal-hotel-case-20180105.page"
-                    >Largest Ever Settlement With City in Illegal Hotel Case</a
-                  >
-                </h5>
-                <h6>
-                  August 2, 2017
-                </h6>
-                <h5>
-                  <a
-                    href="/site/specialenforcement/news/city-awarded-court-appointed-manager-in-midtown-buildings-20170802.page"
-                    >City Awarded Court Appointed Manager in Midtown Buildings to Prevent Illegal Rentals</a
-                  >
-                </h5>
-                <h6>
-                  June 29, 2017
-                </h6>
-                <h5>
-                  <a href="/site/specialenforcement/news/cracking-down-on-illegal-hotels-20170629.page"
-                    >Cracking Down on Illegal Hotels: City Sues Landlord for Converting Hundreds of
-                    Affordable Housing Units
-                  </a>
                 </h5>
               </div>
               <!-- .narrow -->
