added illustrations to quiz

--- a/illegal-short-term-rentals/quiz.html
+++ b/illegal-short-term-rentals/quiz.html
@@ -417,6 +417,7 @@
 
                 <div id="quiz">
                   <div id="q-01" class="question-wrap">
+                    <img src="../images/quiz-images/keys.png" alt="" />
                     <div class="question">Are you a host or a traveler?</div>
                     <div class="answer" data-route="h-01" data-type="type" data-val="host">
                       Host
@@ -426,6 +427,7 @@
                     </div>
                   </div>
                   <div id="h-01" class="question-wrap">
+                    <img src="../images/quiz-images/housing-type.png" alt="" />
                     <div class="question">What type of dwelling will you be hosting in?</div>
                     <div class="answer" data-route="h-02" data-type="dwelling" data-val="apartment">
                       Apartment Building with 2 or more units
@@ -441,7 +443,8 @@
                     </div>
                   </div>
                   <div id="h-02" class="question-wrap">
-                    <div class="question">How long will the paying guests be staying</div>
+                    <img src="../images/quiz-images/calendar.png" alt="" />
+                    <div class="question">How long will the paying guests be staying?</div>
                     <div class="answer" data-route="h-03" data-type="days" data-val="lt30">
                       Fewer than 30 days
                     </div>
@@ -450,6 +453,7 @@
                     </div>
                   </div>
                   <div id="h-03" class="question-wrap">
+                    <img src="../images/quiz-images/owner-home.png" alt="" />
                     <div class="question">
                       Will you be at home while the guests are staying at your place?
                     </div>
@@ -461,6 +465,7 @@
                     </div>
                   </div>
                   <div id="h-04" class="question-wrap">
+                    <img src="../images/quiz-images/people.png" alt="" />
                     <div class="question">Will there be more than 2 total guests in the party?</div>
                     <div class="answer" data-route="results" data-type="number-guests" data-val="gt2">
                       More than 2 guests
@@ -471,7 +476,8 @@
                   </div>
 
                   <div id="t-01" class="question-wrap">
-                    <div class="question">How long will you be staying</div>
+                    <img src="../images/quiz-images/calendar.png" alt="" />
+                    <div class="question">How long will you be staying?</div>
                     <div class="answer" data-route="t-02" data-type="days" data-val="lt30">
                       Fewer than 30 days
                     </div>
@@ -480,6 +486,7 @@
                     </div>
                   </div>
                   <div id="t-02" class="question-wrap">
+                    <img src="../images/quiz-images/people.png" alt="" />
                     <div class="question">
                       Will there be more than 2 total travelers in your party?
                     </div>
@@ -491,6 +498,7 @@
                     </div>
                   </div>
                   <div id="t-03" class="question-wrap">
+                    <img src="../images/quiz-images/keys-hands.png" alt="" />
                     <div class="question">
                       Are you booking the entire place?
                     </div>
@@ -502,6 +510,7 @@
                     </div>
                   </div>
                   <div id="t-04" class="question-wrap">
+                    <img src="../images/quiz-images/owner-home.png" alt="" />
                     <div class="question">
                       Will the host be home during your stay?
                     </div>
