homepage html fixes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="row align-items-center">
             <div class="col-lg py-2">
               <div class="d-flex justify-content-center justify-content-lg-start">
-                <a class="align-self-center" href="../" title="Home">
+                <a class="align-self-center" href="./" title="Home">
                   <!-- Placeholder logo, replace with your own -->
                   <svg
                     id="nyc-ose-logo"
@@ -221,9 +221,6 @@
                             <a href="./laws-and-fines/illegal-short-term-rentals.html"
                               >Illegal Short-Term Rentals Laws & Fines</a
                             >
-                          </li>
-                          <li>
-                            <a href="./laws-and-fines/general-laws-and-fines.html">General Laws & Fines</a>
                           </li>
                           <li>
                             <a href="./laws-and-fines/resolve-a-violation.html"
