updated quiz cta/nav language

--- a/illegal-short-term-rentals/index.html
+++ b/illegal-short-term-rentals/index.html
@@ -198,7 +198,7 @@
                           <li>
                             <a href="../illegal-short-term-rentals/">About Illegal Short-Term Rentals</a>
                           </li>
-                          <li><a href="../illegal-short-term-rentals/quiz.html">Take the Quiz</a></li>
+                          <li><a href="../illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a></li>
                         </ul>
                       </div>
                     </div>
@@ -395,7 +395,7 @@
                     About Illegal Short-Term Rentals
                   </a>
                   <a href="./quiz.html" class="list-group-item list-group-item-action" role="listitem">
-                    Take the Quiz
+                    Quiz: Is Your Rental Legal?
                   </a>
                 </div>
               </nav>
@@ -424,7 +424,7 @@
                   Are you violating short-term rental restrictions and in jeopardy of receiving a fine or
                   legal action from your landlord?
                 </h5>
-                <h5><a href="./quiz">Take the quiz to find out.</a></h5>
+                <h5><a href="./quiz">Quiz: Is Your Rental Legal? to find out.</a></h5>
                 <div class="accordion-group my-4" role="tablist" id="accordion-01">
                   <h3>Hosts:</h3>
                   <p>
