--- a/illegal-short-term-rentals/quiz.html
+++ b/illegal-short-term-rentals/quiz.html
@@ -198,7 +198,7 @@
                           <li>
                             <a href="../illegal-short-term-rentals/">About Illegal Short-Term Rentals</a>
                           </li>
-                          <li><a href="../illegal-short-term-rentals/quiz.html">Take the Quiz</a></li>
+                          <li><a href="../illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a></li>
                         </ul>
                       </div>
                     </div>
@@ -399,7 +399,7 @@
                     class="list-group-item list-group-item-action active"
                     role="listitem"
                   >
-                    Take the Quiz
+                    Quiz: Is Your Rental Legal?
                   </a>
                 </div>
               </nav>
@@ -411,7 +411,7 @@
           <div class="col-xl-8 overflow-hidden" id="primary-content">
             <div class="my-5">
               <div class="narrow my-4">
-                <h3>Is your short-term rental legal? This tool will help you find out.</h3>
+                <h3>Is your rental legal? Take our quiz to find out.</h3>
 
                 <!-- QUIZ //////////////////////////// -->
 
@@ -539,7 +539,7 @@
                           rental activity is legal, so long as you stay for more than 30 days.
                         </p>
                         <p>
-                          If you are considering stays of fewer than 30 days, re-take the quiz to find out
+                          If you are considering stays of fewer than 30 days, retake the quiz to find out
                           if your stay is legal.
                         </p>
                       </div>
@@ -578,7 +578,7 @@
                           rental activity is legal, so long as you stay for more than 30 days.
                         </p>
                         <p>
-                          If you are considering stays of fewer than 30 days, re-take the quiz to find out
+                          If you are considering stays of fewer than 30 days, retake the quiz to find out
                           if your stay is legal.
                         </p>
                       </div>
