--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                           <li>
                             <a href="./illegal-short-term-rentals/">About Illegal Short-Term Rentals</a>
                           </li>
-                          <li><a href="./illegal-short-term-rentals/quiz.html">Take the Quiz</a></li>
+                          <li><a href="./illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a></li>
                         </ul>
                       </div>
                     </div>
@@ -412,7 +412,7 @@
                 <div class="card-footer">
                   <a class="btn btn-lg btn-block has-icon disperse stretched-link" href="./illegal-short-term-rentals/quiz.html">
                     <span class="fas fa-angle-right" role="img"></span>
-                    <span class="title">Take the Quiz!</span>
+                    <span class="title">Take the Quiz</span>
                   </a>
                 </div>
               </div>
