--- a/laws-and-fines/illegal-short-term-rentals.html
+++ b/laws-and-fines/illegal-short-term-rentals.html
@@ -181,7 +181,7 @@
                           <li>
                             <a href="../illegal-short-term-rentals/">About Illegal Short-Term Rentals</a>
                           </li>
-                          <li><a href="../illegal-short-term-rentals/quiz.html">Take the Quiz</a></li>
+                          <li><a href="../illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a></li>
                         </ul>
                       </div>
                     </div>
