--- a/news-and-reports/news.html
+++ b/news-and-reports/news.html
@@ -196,7 +196,7 @@
                       <div class="dropdown-menu" aria-labelledby="nav-item-01">
                         <ul class="extensible-list">
                           <li><a href="../illegal-short-term-rentals/">About Illegal Short-Term Rentals</a></li>
-                          <li><a href="../illegal-short-term-rentals/quiz.html">Take the Quiz</a></li>
+                          <li><a href="../illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a></li>
                         </ul>
                       </div>                      
                     </div>
