--- a/illegal-short-term-rentals/index.html
+++ b/illegal-short-term-rentals/index.html
@@ -225,9 +225,7 @@
                               >Illegal Short-Term Rentals Laws & Fines</a
                             >
                           </li>
-                          <li>
-                            <a href="../laws-and-fines/general-laws-and-fines.html">General Laws & Fines</a>
-                          </li>
+
                           <li>
                             <a href="../laws-and-fines/resolve-a-violation.html"
                               >How to Resolve a Violation</a
@@ -422,9 +420,9 @@
 
                 <h5>
                   Are you violating short-term rental restrictions and in jeopardy of receiving a fine or
-                  legal action from your landlord?
+                  legal action?
                 </h5>
-                <h5><a href="./quiz">Quiz: Is Your Rental Legal? to find out.</a></h5>
+                <h5><a href="./quiz">Take our quiz to find out.</a></h5>
                 <div class="accordion-group my-4" role="tablist" id="accordion-01">
                   <h3>Hosts:</h3>
                   <p>
