--- a/laws-and-fines/illegal-short-term-rentals.html
+++ b/laws-and-fines/illegal-short-term-rentals.html
@@ -181,7 +181,11 @@
                           <li>
                             <a href="../illegal-short-term-rentals/">About Illegal Short-Term Rentals</a>
                           </li>
-                          <li><a href="../illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a></li>
+                          <li>
+                            <a href="../illegal-short-term-rentals/quiz.html"
+                              >Quiz: Is Your Rental Legal?</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -385,6 +389,106 @@
                   investigators, and attorneys promote public safety through enforcement and by proactively
                   fostering community relationships through educational outreach.
                 </p>
+              </div>
+              <div class="wide my-4 fines-table">
+                <div class="t-row t-header">
+                  <div class="t-cell">Violation</div>
+                  <div class="t-cell">Fine</div>
+                </div>
+                <div class="t-row">
+                  <div class="t-cell">Illegal conversion of permanent resident to transient use</div>
+                  <div class="t-cell">
+                    <div class="subhead">
+                      First Offense
+                    </div>
+                    <div class="amount">$2,500–$5,000</div>
+                  </div>
+                  <div class="t-cell">
+                    <div class="subhead">Subsequent Offense <span>1 or 2 Family House</span></div>
+                    <div class="amount">$6,250–$12,500</div>
+                  </div>
+                  <div class="t-cell">
+                    <div class="subhead">Subsequent Offense <span>Multiple Dwelling (3+)</span></div>
+                    <div class="amount">$5,000–$25,000</div>
+                  </div>
+                </div>
+                <!-- /.t-row -->
+                <div class="t-row">
+                  <div class="t-cell">Inadequate sprinklers for transient use</div>
+                  <div class="t-cell">
+                    <div class="subhead">
+                      First Offense
+                    </div>
+                    <div class="amount">$1,250</div>
+                  </div>
+                  <div class="t-cell">
+                    <div class="subhead">
+                      Subsequent Offense
+                    </div>
+                    <div class="amount">$3,125–$6,250</div>
+                  </div>
+                  <div class="t-cell empty"></div>
+                </div>
+                <!-- /.t-row -->
+                <div class="t-row">
+                  <div class="t-cell">Inadequate fire alarm system for transient use</div>
+                  <div class="t-cell">
+                    <div class="subhead">
+                      First Offense
+                    </div>
+                    <div class="amount">$2,500</div>
+                  </div>
+                  <div class="t-cell">
+                    <div class="subhead">
+                      Subsequent Offense
+                    </div>
+                    <div class="amount">$6,250–$12,500</div>
+                  </div>
+                  <div class="t-cell empty"></div>
+                </div>
+                <!-- /.t-row -->
+                <div class="t-row">
+                  <div class="t-cell">Inadequate egress for transient use</div>
+                  <div class="t-cell">
+                    <div class="subhead">
+                      First Offense
+                    </div>
+
+                    <div class="amount">$2,500</div>
+                  </div>
+                  <div class="t-cell">
+                    <div class="subhead">
+                      Subsequent Offense
+                    </div>
+                    <div class="amount">$6,250–$12,500</div>
+                  </div>
+                  <div class="t-cell empty"></div>
+                </div>
+                <!-- /.t-row -->
+                <div class="t-row">
+                  <div class="t-cell">Illegal advertising of short-term rentals in a multiple-dwelling</div>
+                  <div class="t-cell">
+                    <div class="subhead">
+                      First Offense
+                    </div>
+                    <div class="amount">$1,000</div>
+                  </div>
+                  <div class="t-cell">
+                    <div class="subhead">
+                      Second Offense
+                    </div>
+                    <div class="amount">$5,000</div>
+                  </div>
+                  <div class="t-cell">
+                    <div class="subhead">
+                      Third Offense +
+                    </div>
+                    <div class="amount">$7,500</div>
+                  </div>
+                </div>
+                <!-- /.t-row -->
+              </div>
+              <div class="narrow my-4">
                 <p>
                   The Mayor's Office of Special Enforcement relies on a wide array of laws and regulations
                   to carry out its mission of supporting livable communities across New York City. Our
