--- a/news-and-reports/news.html
+++ b/news-and-reports/news.html
@@ -219,7 +219,7 @@
                         <ul class="extensible-list">
                           <li>
                             <a href="../laws-and-fines/illegal-short-term-rentals.html"
-                              >Illegal Short-Term Rentals Laws & Fines</a
+                              >For Illegal Short-Term Rentals</a
                             >
                           </li>
 
@@ -345,7 +345,7 @@
 
     <main role="main">
       <!-- Add your custom image class below (replace 'oculus' with your own custom class) -->
-      <div class="bg-primary banner-with-background hero-2 d-flex flex-column">
+      <div class="bg-primary banner-with-background hero-4 d-flex flex-column">
         <div class="container-fluid my-auto">
           <div class="wide my-3">
             <h1 class="display-4 text-white">News & Reports</h1>
