--- a/about/leadership.html
+++ b/about/leadership.html
@@ -221,7 +221,7 @@
                         <ul class="extensible-list">
                           <li>
                             <a href="../laws-and-fines/illegal-short-term-rentals.html"
-                              >Illegal Short-Term Rentals Laws & Fines</a
+                              >For Illegal Short-Term Rentals</a
                             >
                           </li>
 
