--- a/laws-and-fines/illegal-short-term-rentals.html
+++ b/laws-and-fines/illegal-short-term-rentals.html
@@ -401,7 +401,7 @@
                     <div class="subhead">
                       First Offense
                     </div>
-                    <div class="amount">$2,500–$5,000</div>
+                    <div class="amount">$2,500–$5,000<span class="cap-symb">*</span><span class="cap-symb">†</span></div>
                   </div>
                   <div class="t-cell">
                     <div class="subhead">Subsequent Offense <span>1 or 2 Family House</span></div>
@@ -409,7 +409,7 @@
                   </div>
                   <div class="t-cell">
                     <div class="subhead">Subsequent Offense <span>Multiple Dwelling (3+)</span></div>
-                    <div class="amount">$5,000–$25,000</div>
+                    <div class="amount">$5,000–$25,000<span class="cap-symb">*</span></div>
                   </div>
                 </div>
                 <!-- /.t-row -->
@@ -487,6 +487,15 @@
                   </div>
                 </div>
                 <!-- /.t-row -->
+                <div class="t-row caption">
+                  <span>
+                    <span class="cap-symb">*</span> Additional assessment of daily penalties of $1,000/day up to $45,000 until condition
+                    is corrected.
+                  </span>
+                  <span>
+                    <span class="cap-symb">†</span> Violations for multiple units can carry additional penalties on the first offense.
+                  </span>
+                </div>
               </div>
               <div class="narrow my-4">
                 <p>
