--- a/about/leadership.html
+++ b/about/leadership.html
@@ -366,7 +366,7 @@
                 aria-expanded="false"
                 aria-controls="sidebar-nav"
               >
-                <span class="title">Title</span>
+                <span class="title">Contents</span>
               </button>
             </div>
           </div>
@@ -445,7 +445,7 @@
                     </p>
                   </div>
                 </div>
-                
+
                 <div class="card leadership-card">
                   <div class="card-header">
                     <h3>Aditi Sen</h3>
