--- a/about/contracts-and-solicitations.html
+++ b/about/contracts-and-solicitations.html
@@ -366,7 +366,7 @@
                 aria-expanded="false"
                 aria-controls="sidebar-nav"
               >
-                <span class="title">Title</span>
+                <span class="title">Contents</span>
               </button>
             </div>
           </div>
