--- a/illegal-short-term-rentals/index.html
+++ b/illegal-short-term-rentals/index.html
@@ -367,7 +367,7 @@
                 aria-expanded="false"
                 aria-controls="sidebar-nav"
               >
-                <span class="title">Title</span>
+                <span class="title">Contents</span>
               </button>
             </div>
           </div>
