--- a/laws-and-fines/illegal-short-term-rentals.html
+++ b/laws-and-fines/illegal-short-term-rentals.html
@@ -339,7 +339,7 @@
                 aria-expanded="false"
                 aria-controls="sidebar-nav"
               >
-                <span class="title">Title</span>
+                <span class="title">Contents</span>
               </button>
             </div>
           </div>
