--- a/laws-and-fines/resolve-a-violation.html
+++ b/laws-and-fines/resolve-a-violation.html
@@ -335,7 +335,7 @@
                 aria-expanded="false"
                 aria-controls="sidebar-nav"
               >
-                <span class="title">Title</span>
+                <span class="title">Contents</span>
               </button>
             </div>
           </div>
