--- a/news-and-reports/news.html
+++ b/news-and-reports/news.html
@@ -364,7 +364,7 @@
                 aria-expanded="false"
                 aria-controls="sidebar-nav"
               >
-                <span class="title">Title</span>
+                <span class="title">Contents</span>
               </button>
             </div>
           </div>
