new homepage hero

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
       <section class="featured-panel device-lg" dir="ltr">
         <div class="card bg-primary">
           <div class="photo">
-            <img class="card-img" src="./images/OSE_skyline_home_1.png" alt="Card image" />
+            <img class="card-img" src="./images/ose_web_home@3x.png" alt="NYC Office of Special Enforcement : Stay in the Know" />
           </div>
 
           <div class="card-img-overlay d-flex">
